# first_class

./: CMakeLists.txt  main.cpp
inc/: first_class.hpp
src/: first_class.cpp
